aligning problem solved on menu

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 
 @import "tailwindcss";
 
@@ -8,9 +6,6 @@
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark;
 }
-
-
-
 
 /* --font set up-- */
 .poppins-regular {
@@ -24,8 +19,6 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-
-
 
 /* ---text-color--- */
 
@@ -116,7 +109,8 @@ body {
   font-weight: 600;
   padding: 4px 10px;
   border-radius: 8px;
-  display: block; 
+  display: flex;
+  align-items: center;
 }
 
 /* ---- Hover Effect ---- */
@@ -138,25 +132,23 @@ body {
   background-image: linear-gradient(90deg, #1cb5e0 0%, #3645cd 100%);
   position: relative;
 
-
-  -webkit-text-fill-color: unset; 
+  -webkit-text-fill-color: unset;
   color: #1cb5e0;
 }
 
-
 .menu li a.active svg {
-    color: #1cb5e0; 
+  color: #1cb5e0;
 }
 
 /* ---- Active underline ---- */
 .menu li a.active::after {
   content: "";
   position: absolute;
-  left: 0; 
-  right: 0; 
+  left: 0;
+  right: 0;
   bottom: -3px;
-  transform: none; 
-  width: auto; 
+  transform: none;
+  width: auto;
   height: 3px;
   background: linear-gradient(90deg, #1cb5e0 0%, #3645cd 100%);
   border-radius: 2px;
@@ -165,5 +157,5 @@ body {
 
 /* Optional: make underline animate on hover */
 .menu li a.active:hover::after {
-  width: auto; 
+  width: auto;
 }
